[gd_scene load_steps=31 format=3 uid="uid://b5fgtoheys8wj"]

[ext_resource type="Script" path="res://technical_scenes/start_menu.gd" id="1_1u6fs"]
[ext_resource type="Texture2D" uid="uid://xac8p088nbhf" path="res://assets/background/main menu2.png" id="2_b30ni"]
[ext_resource type="FontFile" uid="uid://cac7mfbacrt4q" path="res://assets/fonts/CaslonAntique.ttf" id="3_6lw4s"]
[ext_resource type="AudioStream" uid="uid://dvguc2pqth0g0" path="res://assets/music/amb1.mp3" id="3_jvlnd"]
[ext_resource type="Texture2D" uid="uid://cr0brpkue0eo6" path="res://assets/sprites/button_idle_blank.png" id="4_8bshe"]
[ext_resource type="AudioStream" uid="uid://oliwd47rel3f" path="res://assets/sounds/Abstract1.mp3" id="4_nxg1k"]
[ext_resource type="Texture2D" uid="uid://c2vfel8nb8fpy" path="res://assets/UI/button.png" id="5_1r252"]
[ext_resource type="Texture2D" uid="uid://ccpu24335nkak" path="res://assets/sprites/smoke_7.png" id="7_bxyp5"]
[ext_resource type="Texture2D" uid="uid://ccy5wdyknhkp5" path="res://assets/sprites/fire_Sheet.png" id="8_tgwb5"]
[ext_resource type="Texture2D" uid="uid://m28erc4fsvln" path="res://assets/sprites/return_hover.png" id="9_16n3t"]

[sub_resource type="Curve" id="Curve_m14dt"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.0478088, 0.218698), 0.0, 0.0, 0, 0, Vector2(0.175299, 0.468281), 0.0, 0.0, 0, 0, Vector2(0.346614, 0.631052), 0.0, 0.0, 0, 0, Vector2(0.677291, 0.674457), 0.0, 0.0, 0, 0, Vector2(0.836653, 0.489983), 0.0, 0.0, 0, 0, Vector2(0.936255, 0.272955), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 8

[sub_resource type="CurveTexture" id="CurveTexture_tj5qs"]
curve = SubResource("Curve_m14dt")

[sub_resource type="Curve" id="Curve_qo8qg"]
min_value = -360.0
max_value = 360.0
_data = [Vector2(0, -360), 0.0, 0.0, 0, 0, Vector2(1, 360), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_85pi5"]
curve = SubResource("Curve_qo8qg")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_1higy"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(1050, 600, 1)
angle_min = 1.07288e-05
angle_max = 1.00001
angle_curve = SubResource("CurveTexture_85pi5")
spread = 180.0
initial_velocity_min = 1.0
initial_velocity_max = 20.0
gravity = Vector3(10, 10, 0)
scale_min = 0.0
scale_max = 0.03
alpha_curve = SubResource("CurveTexture_tj5qs")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gw5td"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ct6d5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_v7ysv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3ib5j"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hr25e"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_j0s6a"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tlkaw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bo34c"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mmnb6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kbsle"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_am03m"]
particles_animation = true
particles_anim_h_frames = 3
particles_anim_v_frames = 3
particles_anim_loop = true

[sub_resource type="Curve" id="Curve_hoahh"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.501992, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_a4tln"]
curve = SubResource("Curve_hoahh")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_7thhu"]
particle_flag_disable_z = true
gravity = Vector3(0, 20, 0)
scale_min = 0.1
scale_max = 0.5
alpha_curve = SubResource("CurveTexture_a4tln")
anim_offset_max = 1.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hekb8"]

[node name="Start_menu" type="Control"]
z_index = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 4.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1u6fs")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(968.75, 560.5)
scale = Vector2(1.10026, 1.05234)
texture = ExtResource("2_b30ni")
region_rect = Rect2(0, 0, 1920, 1080)

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(960, 540)
amount = 400
process_material = SubResource("ParticleProcessMaterial_1higy")
texture = ExtResource("7_bxyp5")
lifetime = 5.0
preprocess = 10.0

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -540.0
offset_right = 480.0
offset_bottom = 540.0
grow_vertical = 2
color = Color(0, 0, 0, 0.392157)

[node name="menu_buttons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -118.0
offset_right = 480.0
offset_bottom = 118.0
grow_vertical = 2

[node name="play" type="Button" parent="menu_buttons"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_6lw4s")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_gw5td")
text = "Play"
icon = ExtResource("5_1r252")
icon_alignment = 1

[node name="lore" type="Button" parent="menu_buttons"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_6lw4s")
theme_override_font_sizes/font_size = 32
text = "Lore"
icon = ExtResource("5_1r252")
icon_alignment = 1

[node name="settings" type="Button" parent="menu_buttons"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_6lw4s")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_ct6d5")
text = "Settings"
icon = ExtResource("5_1r252")
icon_alignment = 1

[node name="exit" type="Button" parent="menu_buttons"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_6lw4s")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_v7ysv")
text = "Exit"
icon = ExtResource("5_1r252")
icon_alignment = 1

[node name="modes" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -23.0
offset_right = 480.0
offset_bottom = 93.0
grow_vertical = 2

[node name="solo" type="Button" parent="modes"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_6lw4s")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_3ib5j")
text = "Solo"
icon = ExtResource("4_8bshe")
flat = true
icon_alignment = 1

[node name="multi" type="Button" parent="modes"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_6lw4s")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_hr25e")
text = "Multiplayer"
icon = ExtResource("4_8bshe")
flat = true
icon_alignment = 1

[node name="multiplayer_menu" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -23.0
offset_right = 480.0
offset_bottom = 93.0
grow_vertical = 2

[node name="Label3" type="Label" parent="multiplayer_menu"]
visible = false
layout_mode = 2
theme_override_fonts/font = ExtResource("3_6lw4s")
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1

[node name="Label" type="Label" parent="multiplayer_menu"]
visible = false
layout_mode = 2
theme_override_fonts/font = ExtResource("3_6lw4s")
theme_override_font_sizes/font_size = 32
text = "This side was chosen already!"
horizontal_alignment = 1

[node name="m_buttons" type="VBoxContainer" parent="multiplayer_menu"]
layout_mode = 2

[node name="host" type="Button" parent="multiplayer_menu/m_buttons"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_6lw4s")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_j0s6a")
text = "Host"
icon = ExtResource("4_8bshe")
flat = true
icon_alignment = 1

[node name="join" type="Button" parent="multiplayer_menu/m_buttons"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_6lw4s")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_tlkaw")
text = "Join"
icon = ExtResource("4_8bshe")
flat = true
icon_alignment = 1

[node name="side_buttons" type="VBoxContainer" parent="multiplayer_menu"]
visible = false
layout_mode = 2

[node name="white" type="Button" parent="multiplayer_menu/side_buttons"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_6lw4s")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_bo34c")
text = "Choose white side"
icon = ExtResource("4_8bshe")
flat = true
icon_alignment = 1

[node name="black" type="Button" parent="multiplayer_menu/side_buttons"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_6lw4s")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_mmnb6")
text = "Choose black side"
icon = ExtResource("4_8bshe")
flat = true
icon_alignment = 1

[node name="startgame" type="Button" parent="multiplayer_menu"]
visible = false
layout_mode = 2
theme_override_fonts/font = ExtResource("3_6lw4s")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_kbsle")
text = "Start Game"
icon = ExtResource("4_8bshe")
flat = true
icon_alignment = 1

[node name="Label2" type="Label" parent="multiplayer_menu"]
visible = false
layout_mode = 2
theme_override_fonts/font = ExtResource("3_6lw4s")
theme_override_font_sizes/font_size = 32
text = "Waiting for host to start."
horizontal_alignment = 1

[node name="Label4" type="Label" parent="multiplayer_menu"]
visible = false
layout_mode = 2
theme_override_fonts/font = ExtResource("3_6lw4s")
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1

[node name="menu_music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_jvlnd")
volume_db = -15.0
autoplay = true
bus = &"Music"

[node name="button_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_nxg1k")
bus = &"SoundFX"

[node name="GPUParticles2D2" type="GPUParticles2D" parent="."]
visible = false
material = SubResource("CanvasItemMaterial_am03m")
position = Vector2(795, 795)
amount = 20
process_material = SubResource("ParticleProcessMaterial_7thhu")
texture = ExtResource("8_tgwb5")
lifetime = 3.0
preprocess = 10.0

[node name="back_button" type="Button" parent="."]
visible = false
layout_mode = 2
offset_left = 20.0
offset_top = 930.0
offset_right = 92.0
offset_bottom = 1002.0
grow_vertical = 0
theme_override_styles/focus = SubResource("StyleBoxEmpty_hekb8")
icon = ExtResource("9_16n3t")

[connection signal="pressed" from="menu_buttons/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="menu_buttons/lore" to="." method="_on_lore_pressed"]
[connection signal="pressed" from="menu_buttons/settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="menu_buttons/exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="modes/solo" to="." method="_on_solo_pressed"]
[connection signal="pressed" from="modes/multi" to="." method="_on_multi_pressed"]
[connection signal="pressed" from="multiplayer_menu/m_buttons/host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="multiplayer_menu/m_buttons/join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="multiplayer_menu/side_buttons/white" to="." method="_on_white_pressed"]
[connection signal="pressed" from="multiplayer_menu/side_buttons/black" to="." method="_on_black_pressed"]
[connection signal="pressed" from="multiplayer_menu/startgame" to="." method="_on_startgame_pressed"]
[connection signal="pressed" from="back_button" to="." method="_on_back_button_pressed"]
